feat: add headlineDestaque to ContatoInfo, include tipoAcao in Cta, update CORS policy, and refresh data.sql records.